tests/language_tests/pass/0142_len_array.ee
fn main() {
    println(len([1, 2, 3]));
    println(len([]));
}
