tests/language_tests/fail/0083_array_read_out_of_bounds.ee
fn main() {
    let values = [1, 2, 3];
    println(values[3]);
}
